@@ -2,14 +2,15 @@
 name    = Task-BeLike-LESPEA
 author  = Adam Lesperance <lespea@gmail.com>
 license = Perl_5
-version = 2.000000
+version = 2.001000
 
 copyright_holder = Adam Lesperance
-copyright_year   = 2010
+copyright_year   = 2011
 
 
 [@Author::LESPEA]
--remove            = ReportVersions
+;  We need to manually add this to skip Devel::NYTProf or it'll mess up everything!
+-remove            = ReportVersions::Tiny
 
 ;release           = real
 ;
@@ -26,89 +27,65 @@ copyright_year   = 2010
 ;compile_synopsis  = 1
 
 
+[ReportVersions::Tiny]
+exclude = Devel::NYTProf
+
+
 [Prereqs]
-DBD::CSV = 0
-DBD::ODBC = 0
-DBI = 0
-DateTime::Format::DateParse = 0
-Devel::NYTProf = 0
-Dist::Zilla = 0
-Dist::Zilla::Plugin::Authority = 0
-Dist::Zilla::Plugin::Bugtracker = 0
-Dist::Zilla::Plugin::CheckChangeLog = 0
-Dist::Zilla::Plugin::CheckChangesHasContent = 0
-Dist::Zilla::Plugin::CheckChangesTests = 0
-Dist::Zilla::Plugin::CompileTests = 0
-Dist::Zilla::Plugin::CriticTests = 0
-Dist::Zilla::Plugin::HasVersionTests = 0
-Dist::Zilla::Plugin::Homepage = 0
-Dist::Zilla::Plugin::InstallGuide = 0
-Dist::Zilla::Plugin::KwaliteeTests = 0
-Dist::Zilla::Plugin::MinimumPerl = 0
-Dist::Zilla::Plugin::MinimumVersionTests = 0
-Dist::Zilla::Plugin::PodWeaver = 0
-Dist::Zilla::Plugin::PortabilityTests = 0
-Dist::Zilla::Plugin::Prepender = 0
-Dist::Zilla::Plugin::ReadmeFromPod = 0
-Dist::Zilla::Plugin::ReportVersions = 0
-Dist::Zilla::Plugin::Repository = 0
-Dist::Zilla::Plugin::SynopsisTests = 0
-Dist::Zilla::Plugin::UnusedVarsTests = 0
-Dist::Zilla::PluginBundle::Author::LESPEA = 0
-Exporter::Easy = 0
-File::HomeDir = 0
-File::ShareDir = 0
-File::Slurp = 0
-Getopt::Long::Descriptive = 0
-HTML::Tree = 0
-HTML::TreeBuilder::XPath = 0
-JSON = 0
-JSON::Any = 0
-JSON::XS = 0
-List::MoreUtils = 0
-Math::Big = 0
-Math::Big::Factors = 0
-Module::Build = 0
-Module::Install = 0
-Module::Install::AuthorTests = 0
-Module::Install::ExtraTests = 0
-Module::Starter = 0
-Moose = 0
-MooseX::App::Cmd = 0
-MooseX::Method::Signatures = 0
-MooseX::Types::Common = 0
-MooseX::Types::DateTimeX = 0
-MooseX::Types::Structured = 0
-Net::CIDR::Lite = 0
-Net::DNS = 0
-Net::IP = 0
-Net::Netmask = 0
-Net::Ping = 0
-Perl::Critic = 0
-Perl::MinimumVersion = 0
-Perl::PrereqScanner = 0
-Pod::Coverage::TrustPod = 0
-Pod::Elemental::Transformer::List = 0
-Pod::Weaver = 0
-Pod::Weaver::Section::Support = 0
-Readonly::XS = 0
-Regexp::Common = 0
-Spreadsheet::ParseExcel = 0
-Spreadsheet::Read = 0
-Spreadsheet::WriteExcel = 0
-Test::CPAN::Meta = 0
-Test::Most = 0
-Test::Perl::Critic = 0
-Test::Pod = 0
-Test::Pod::Coverage = 0
-Text::CSV_XS = 0
-Try::Tiny = 0
-YAML = 0
-YAML::Any = 0
-YAML::Syck = 0
-YAML::XS = 0
-autodie = 0
-namespace::autoclean = 0
+DBD::CSV = 0.000000
+DBD::ODBC = 0.000000
+DBI = 0.000000
+DateTime::Format::DateParse = 0.000000
+Devel::NYTProf = 0.000000
+Dist::Zilla = 0.000000
+Dist::Zilla::PluginBundle::Author::LESPEA = 1.003000
+Exporter::Easy = 0.000000
+File::HomeDir = 0.000000
+File::ShareDir = 0.000000
+File::Slurp = 0.000000
+Getopt::Long::Descriptive = 0.000000
+HTML::Tree = 0.000000
+HTML::TreeBuilder::XPath = 0.000000
+JSON = 0.000000
+JSON::Any = 0.000000
+JSON::XS = 0.000000
+List::MoreUtils = 0.000000
+Math::Big = 0.000000
+Math::Big::Factors = 0.000000
+Module::Build = 0.000000
+Module::Install = 0.000000
+Module::Install::AuthorTests = 0.000000
+Module::Install::ExtraTests = 0.000000
+Module::Starter = 0.000000
+Moose = 0.000000
+MooseX::App::Cmd = 0.000000
+MooseX::Method::Signatures = 0.000000
+MooseX::Types::Common = 0.000000
+MooseX::Types::DateTimeX = 0.000000
+MooseX::Types::Structured = 0.000000
+Net::CIDR::Lite = 0.000000
+Net::DNS = 0.000000
+Net::IP = 0.000000
+Net::Netmask = 0.000000
+Net::Ping = 0.000000
+Perl::Critic = 0.000000
+Readonly::XS = 0.000000
+Regexp::Common = 0.000000
+Spreadsheet::ParseExcel = 0.000000
+Spreadsheet::Read = 0.000000
+Spreadsheet::WriteExcel = 0.000000
+Test::Most = 0.000000
+Test::Perl::Critic = 0.000000
+Test::Pod = 0.000000
+Test::Pod::Coverage = 0.000000
+Text::CSV_XS = 0.000000
+Try::Tiny = 0.000000
+YAML = 0.000000
+YAML::Any = 0.000000
+YAML::Syck = 0.000000
+YAML::XS = 0.000000
+autodie = 0.000000
+namespace::autoclean = 0.000000
 
 
 
