@@ -4,27 +4,6 @@ call ppm install DBI
 call ppm install DateTime::Format::DateParse
 call ppm install Devel::NYTProf
 call ppm install Dist::Zilla
-call ppm install Dist::Zilla::Plugin::Authority
-call ppm install Dist::Zilla::Plugin::Bugtracker
-call ppm install Dist::Zilla::Plugin::CheckChangeLog
-call ppm install Dist::Zilla::Plugin::CheckChangesHasContent
-call ppm install Dist::Zilla::Plugin::CheckChangesTests
-call ppm install Dist::Zilla::Plugin::CompileTests
-call ppm install Dist::Zilla::Plugin::CriticTests
-call ppm install Dist::Zilla::Plugin::HasVersionTests
-call ppm install Dist::Zilla::Plugin::Homepage
-call ppm install Dist::Zilla::Plugin::InstallGuide
-call ppm install Dist::Zilla::Plugin::KwaliteeTests
-call ppm install Dist::Zilla::Plugin::MinimumPerl
-call ppm install Dist::Zilla::Plugin::MinimumVersionTests
-call ppm install Dist::Zilla::Plugin::PodWeaver
-call ppm install Dist::Zilla::Plugin::PortabilityTests
-call ppm install Dist::Zilla::Plugin::Prepender
-call ppm install Dist::Zilla::Plugin::ReadmeFromPod
-call ppm install Dist::Zilla::Plugin::ReportVersions
-call ppm install Dist::Zilla::Plugin::Repository
-call ppm install Dist::Zilla::Plugin::SynopsisTests
-call ppm install Dist::Zilla::Plugin::UnusedVarsTests
 call ppm install Dist::Zilla::PluginBundle::Author::LESPEA
 call ppm install Exporter::Easy
 call ppm install File::HomeDir
@@ -56,18 +35,11 @@ call ppm install Net::IP
 call ppm install Net::Netmask
 call ppm install Net::Ping
 call ppm install Perl::Critic
-call ppm install Perl::MinimumVersion
-call ppm install Perl::PrereqScanner
-call ppm install Pod::Coverage::TrustPod
-call ppm install Pod::Elemental::Transformer::List
-call ppm install Pod::Weaver
-call ppm install Pod::Weaver::Section::Support
 call ppm install Readonly::XS
 call ppm install Regexp::Common
 call ppm install Spreadsheet::ParseExcel
 call ppm install Spreadsheet::Read
 call ppm install Spreadsheet::WriteExcel
-call ppm install Test::CPAN::Meta
 call ppm install Test::Most
 call ppm install Test::Perl::Critic
 call ppm install Test::Pod
