@@ -4,6 +4,11 @@ Revision history for {{$dist->name}}
     [Bugfix]
     *   Corrected POD spelling]
 
+    [Enhancement]
+    *   Remove all dzil modules that my dzil plugin now specifies
+    *   Allow specifing a version of a module that is needed
+    *   Reportversions::Tiny now skips Devel::NYTProf to stop it from messing up everything
+
 
 2.000000  2011-02-19 19:32:59 America/Chicago
     *   Switch over to new Dist::Zilla
